2008-08-02  Johan Dahlin  <johan@gnome.org>

	* gio/gio.defs:
	* gio/gfile.override:
	* tests/test_gio.py:
	Wrap gio.File.move

2008-08-02  Johan Dahlin  <johan@gnome.org>

	* gio/Makefile.am:
	* gio/gfile.override:
	* gio/gio.defs:
	* gio/gio.override:
	* gio/gvolume.override:
	Wrap gio.Volume.mount and gio.Volume.eject

2008-08-01  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gio.defs:
	Add docstring for gio.FileInfo.list_attributes

2008-08-01  Johan Dahlin  <johan@gnome.org>

	Bug 545861 – g_file_info_get_modification_time is missing
	* gio/gfileinfo.override:
	* gio/gio.defs:
	* tests/test_gio.py:
	Wrap, add test and documentation

2008-08-01  Johan Dahlin  <johan@gnome.org>

	Bug 545846 – g_vfs_get_supported_uri_schemes is missing

	* gio/gio.defs:
	* gio/gio.override:
	* tests/test_gio.py:
	Wrap, add test and documentation

2008-08-01  Johan Dahlin  <johan@gnome.org>

	* glib/glibmodule.c (pyglib_set_application_name):
	Use %r instead of %s, this is not python!

2008-07-31  Johan Dahlin  <johan@gnome.org>

	* glib/glibmodule.c (pyglib_set_prgname)
	(pyglib_set_application_name): Use METH_O instead of METH_VARARGS.
	(_glib_functions): Add doc strings for idle_add, timeout_add,
	timeout_add_seconds, io_add_watch, child_watch_add, source_remove,
	main_depth and main_context_default.

2008-07-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* tests/test_gio.py:
	* gio/gfileattribute.override:
	* gio/gio.override:
	* gio/gio.defs:
	* gio/gfile.override:
	* gio/Makefile.am: Wrap new object gio.FileAttributeInfo,
	g_file_set_attribute and g_file_query_settable_attributes methods.

2008-07-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/unix-types.defs: Wrap gio.unix.DesktopAppInfo

	* gio/gappinfo.override:
	* gio/gio.override:
	* gio/gio.defs:
	* gio/gapplaunchcontext.override:
	* gio/Makefile.am: Wrap g_app_info_launch_uris,
	g_app_info_launch, g_app_launch_context_get_display and
	g_app_launch_context_get_startup_notify_id

	* gio/pygio-utils.c: