@@ -1,3 +1,12 @@
+2008-08-02  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
+	Bug 545920 – Wrap GFile.query_writable_namespaces
+
+	* tests/test_gio.py:
+	* gio/gfile.override:
+	* gio/gio.defs:
+	Wrap GFile.query_writable_namespaces with docs and test
+
 2008-08-02  Johan Dahlin  <johan@gnome.org>
 
 	* gio/gio.defs:
